--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"],
-  "parser": "babel-eslint"
+  "extends": "next/babel"
+  // "parser": "babel-eslint"
 }
