--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^6.3.16",
     "next": "12.2.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
